--- a/app/src/main/res/layout/fragment_top_movies.xml
+++ b/app/src/main/res/layout/fragment_top_movies.xml
@@ -6,8 +6,22 @@
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
+        android:id="@+id/errorText"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/network_error"
+        android:visibility="gone"
         />
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="@dimen/progress_bar_width"
+        android:layout_height="@dimen/progress_bar_height"
+        android:layout_gravity="center"/>
+
+    <android.support.v7.app.AlertController.RecycleListView
+        android:id="@+id/rv_movieGrid"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+    </android.support.v7.app.AlertController.RecycleListView>
 
 </FrameLayout>
