Added dependencies for RecyclerView. Made a method in TopMovieFragment to set views(error, loading and main display). Changed fragment_top_movie.xml recycle view to the appropriate view.

--- a/app/src/main/res/layout/fragment_top_movies.xml
+++ b/app/src/main/res/layout/fragment_top_movies.xml
@@ -18,10 +18,10 @@
         android:layout_height="@dimen/progress_bar_height"
         android:layout_gravity="center"/>
 
-    <android.support.v7.app.AlertController.RecycleListView
+    <android.support.v7.widgets.RecycleView
         android:id="@+id/rv_movieGrid"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-    </android.support.v7.app.AlertController.RecycleListView>
+    </android.support.v7.widgets.RecycleView>
 
 </FrameLayout>
