Created a new class in Constants called BUNDLE_KEYS -It will store all bundle keys so i can reference them between classes.
Decided to use argument to paste in the data from the activity to fragment
Error and progress are now displayed in the MainActivity and not the fragment

The TopMovieFragment is now only created if we get a successful response from the server with the movie data.

Renamed a few methods  to be more descriptive.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,20 @@
     android:layout_height="match_parent"
     tools:context="moviestalkercom.red_spark.redsparkdev.moviestalker.MainActivity">
 
+    <TextView
+        android:id="@+id/errorText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/network_error"
+        android:visibility="gone"
+        />
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="@dimen/progress_bar_width"
+        android:layout_height="@dimen/progress_bar_height"
+        android:layout_gravity="center"/>
+
+
     <FrameLayout
         android:id="@+id/fragment_container"
         android:layout_height="match_parent"
