Implemented TopMovieFragmentAdapter --it show the link to the thumbnail for now
MainActivity
--I forgot to bind butterknife, that was corrected.1
--Added null-check for the network response
--Made sure the progressbar was removed if an error occured

activity_main.xml
--Root layout is not a FrameLayout

Added internet permissions to manifest

--- a/app/src/main/res/layout/fragment_top_movies.xml
+++ b/app/src/main/res/layout/fragment_top_movies.xml
@@ -4,12 +4,10 @@
     android:layout_height="match_parent"
     tools:context="moviestalkercom.red_spark.redsparkdev.moviestalker.fragments.TopMoviesFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-
-    <android.support.v7.widgets.RecycleView
+    <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_movieGrid"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-    </android.support.v7.widgets.RecycleView>
+    </android.support.v7.widget.RecyclerView>
 
 </FrameLayout>
