--- a/app/src/main/res/layout/fragment_top_movies.xml
+++ b/app/src/main/res/layout/fragment_top_movies.xml
@@ -2,12 +2,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="moviestalkercom.red_spark.redsparkdev.moviestalker.fragments.TopMoviesFragment">
+    tools:context="moviestalkercom.red_spark.redsparkdev.moviestalker.fragments.ThumbnailFragment">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_movieGrid"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
     </android.support.v7.widget.RecyclerView>
 
 </FrameLayout>
