--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,6 +29,7 @@
         android:layout_height="match_parent"
         android:layout_weight="1">
         <android.support.v4.view.PagerTabStrip
+            android:id="@+id/pageTabStrip"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
@@ -36,7 +37,8 @@
         <FrameLayout
             android:id="@+id/fragment_container"
             android:layout_height="match_parent"
-            android:layout_width="match_parent"/>
+            android:layout_width="match_parent"
+            />
 
     </android.support.v4.view.ViewPager>
 
