--- a/app/src/main/res/layout/movie_list_item.xml
+++ b/app/src/main/res/layout/movie_list_item.xml
@@ -5,4 +5,5 @@
     android:id="@+id/image_thumbnail"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:adjustViewBounds="true" />
+    android:layout_margin="4dp"
+    android:adjustViewBounds="true"/>
