--- a/app/src/main/res/layout/fragment_item_detail.xml
+++ b/app/src/main/res/layout/fragment_item_detail.xml
@@ -3,66 +3,89 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorAccent"
+    android:clipToPadding="false"
     tools:context="moviestalkercom.red_spark.redsparkdev.moviestalker.fragments.ItemDetailFragment">
-
-    <!-- TODO: Update blank fragment layout -->
 
     <ImageView
         android:id="@+id/iv_backDrop"
         android:layout_width="0dp"
-        android:layout_height="150dp"
+        android:layout_height="wrap_content"
+        android:adjustViewBounds="true"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@android:color/holo_green_light"
-        android:layout_marginTop="0dp"
         app:layout_constraintHorizontal_bias="0.0" />
 
-    <ImageView
-        android:id="@+id/iv_thumbnail"
-        android:layout_width="95dp"
-        android:layout_height="150dp"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:srcCompat="@android:color/holo_red_dark"
-        android:layout_marginStart="8dp"
+    <TextView
+        android:id="@+id/releaseDate"
+        style="@style/NormalText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/primary_corners"
+        android:elevation="@dimen/normal_elevation"
+        android:textAlignment="center"
+        app:layout_constraintRight_toRightOf="@+id/iv_backDrop"
         app:layout_constraintTop_toTopOf="@+id/iv_backDrop"
-        android:layout_marginTop="55dp"
-        app:layout_constraintBottom_toBottomOf="@+id/iv_backDrop"
-        android:layout_marginBottom="0dp"
-        app:layout_constraintVertical_bias="0.0" />
+        android:layout_margin="@dimen/normal_margin"
+        android:paddingLeft="@dimen/small_padding"
+        android:paddingRight="@dimen/small_padding"/>
+
+    <TextView
+        android:id="@+id/ratingText"
+        style="@style/TitleText"
+        android:background="@drawable/primary_corners"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:elevation="@dimen/normal_elevation"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/tv_Title"
+        app:layout_constraintTop_toTopOf="@+id/tv_Title"
+        android:layout_margin="@dimen/normal_margin"
+        android:paddingLeft="@dimen/small_padding"
+        android:paddingRight="@dimen/small_padding"/>
 
     <TextView
         android:id="@+id/tv_Title"
         style="@style/TitleText"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_margin="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:background="@color/colorPrimary"
-        app:layout_constraintLeft_toRightOf="@+id/iv_thumbnail"
-        app:layout_constraintRight_toRightOf="@+id/iv_backDrop"
+        android:background="@drawable/primary_corners"
+        android:elevation="@dimen/normal_elevation"
+        android:textAlignment="center"
+        android:layout_margin="@dimen/normal_margin"
+        app:layout_constraintRight_toLeftOf="@+id/floatingActionButton"
+        app:layout_constraintLeft_toRightOf="@+id/ratingText"
         app:layout_constraintTop_toBottomOf="@+id/iv_backDrop"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/tv_disc"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintVertical_bias="0.0" />"
-        app:layout_constraintBottom_toTopOf="@+id/tv_disc" />
+        app:layout_constraintHorizontal_bias="0.0"/>
 
     <TextView
         android:id="@+id/tv_disc"
         style="@style/NormalText"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_margin="8dp"
-        android:layout_marginTop="8dp"
-        android:background="@color/colorAccent"
+        android:background="@drawable/primary_corners"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/iv_thumbnail"
-        android:layout_marginLeft="0dp"
-        app:layout_constraintHorizontal_bias="0.5" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_Title"
+        android:elevation="@dimen/normal_elevation"
+        android:layout_margin="@dimen/normal_margin"
+        android:paddingRight="@dimen/small_padding"
+        android:paddingLeft="@dimen/small_padding"/>
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/floatingActionButton"
+        android:layout_width="@dimen/floaring_button_size"
+        android:layout_height="@dimen/floaring_button_size"
+        android:clickable="true"
+        app:backgroundTint="@drawable/primary_corners"
+        app:fabSize="mini"
+        app:elevation="@dimen/floating_button_elevation"
+        app:srcCompat="@android:drawable/star_big_on"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/iv_backDrop"
+        app:layout_constraintBottom_toBottomOf="@+id/iv_backDrop"
+        android:layout_margin="@dimen/normal_margin"/>
+
 </android.support.constraint.ConstraintLayout>
