--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -2,4 +2,15 @@
 <resources>
     <dimen name="progress_bar_height">100dp</dimen>
     <dimen name="progress_bar_width">@dimen/progress_bar_height</dimen>
+
+    <dimen name="normal_elevation">4dp</dimen>
+    <dimen name="floating_button_elevation">6dp</dimen>
+
+    <dimen name="normal_padding">8dp</dimen>
+    <dimen name="small_padding">4dp</dimen>
+
+    <dimen name="normal_margin">8dp</dimen>
+    <dimen name="small_margin">4dp</dimen>
+
+    <dimen name="floaring_button_size">50dp</dimen>
 </resources>
