Creating 2 separate tables -1 for movies -2 for Series
Created a way to add a row to a database table
Created a way to remove a row from a database table
Created a way to check if the items exists in the database(using network id)

The add/remove floating button if functional now

--- a/app/src/main/res/layout/fragment_item_detail.xml
+++ b/app/src/main/res/layout/fragment_item_detail.xml
@@ -75,14 +75,14 @@
         android:paddingLeft="@dimen/small_padding"/>
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/floatingActionButton"
+        android:id="@+id/buttonAddToFav"
         android:layout_width="@dimen/floaring_button_size"
         android:layout_height="@dimen/floaring_button_size"
         android:clickable="true"
         app:backgroundTint="@drawable/primary_corners"
         app:fabSize="mini"
         app:elevation="@dimen/floating_button_elevation"
-        app:srcCompat="@android:drawable/star_big_on"
+        app:srcCompat="@android:drawable/star_big_off"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/iv_backDrop"
         app:layout_constraintBottom_toBottomOf="@+id/iv_backDrop"
